// src/proto/delivery.proto
syntax = "proto3";

package delivery;

service DeliveryService {
  // BÃºsqueda de repartidores
  rpc SearchDrivers(SearchDriversRequest) returns (stream SearchDriversResponse) {}

  // Streaming para repartidores activos
   rpc updateDriverLocation(DriverLocation) returns (stream UpdateDriverLocation) {}
}

message SearchDriversRequest {
  string no_order = 1;
  DeliveryPoint delivery_point = 2;
  float search_radius_km = 4;
}

message SearchDriversResponse {
  string no_courier = 1;
  string courier_name = 2;
  double lat = 3;
  double lng = 4;
  string status = 5;
}

message DeliveryPoint {
  string address = 1;
  double lat = 2;
  double lng = 3;
}

message DriverLocation {
  string no_courier = 1;
  double lat = 2;
  double lng = 3;
  int64 distance_km = 4;
  string fcm_token = 5;
}

message UpdateDriverLocation {
  bool success = 1;
  string status = 2;
}